# quarterly_diff_automation

./: .gitignore  .gitmodules  .mypy.ini  .pylintrc  513026484_psum_p322.xls  513026484_psum_p422.xls  gui.spec  pyproject.toml  quarterly_diff.spec
.github/workflows/: pylint.yml
quarterly_diff/: __init__.py  quarterly_diff.py
quarterly_diff/excel_parser/: excel_parser.py  phoenix_parser.py
quarterly_diff/parsers/: __init__.py  altshuler_parser.py  company_investment.py  excel_parser.py  harel_parser.py  menora_parser.py  phoenix_parser.py
tests/test_quarterly_diff/: menora_4_22.xls  phoenix_3_22.xls  test_parsers.py
tests/test_quarterly_diff/example_portfolios/: altshuler_4_22.xlsx  clal_gemel_3_22.xlsx  clal_gemel_4_22.xlsx  clal_pension_3_22.xlsx  clal_pension_4_22.xlsx  harel_4_22.xlsx  meitav_4_22.xlsx  menora_4_22.xls  menora_4_22.xlsx  migdal_4_22.xlsx  mor_1_4_22.xlsx  mor_2_4_22.xlsx  phoenix_4_22.xls
