[tool.poetry]
name = "quarterly-diff"
version = "0.1.0"
description = ""
authors = ["Itamar <itamar@ivc-online>"]
readme = "README.md"
packages = [{include = "quarterly_diff"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
tkdesigner = "^1.0.7"
tkinterdnd2 = "^0.3.0"
tkinterdnd2-pmgagne = {path = "tkinterdnd2"}
pyinstaller = "^5.9.0"
mypy = "^1.2.0"
pytest = "^7.3.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Print area cannot be set to Defined name:UserWarning:openpyxl",
]
